--- a/_posts/2019-06-04-toy.md
+++ b/_posts/2019-06-04-toy.md
@@ -1,7 +1,8 @@
 ---
 layout: single
-title:  "toy"
+title:  "An Underfit Overview of Machine Learning"
 date:   2019-06-04
 ---
 
-my first post looks just fine.
+In this blog, a piece I completed during my residence at the University of Michigan's Shapiro Design Lab, I attempt to convey the nitty-gritty components of machine learning in an easy to understand way.  
+https://www.lib.umich.edu/blogs/lab-notes/underfit-overview-machine-learning
