trying to fix pages issue

--- a/_posts/2019-06-04-toy.md
+++ b/_posts/2019-06-04-toy.md
@@ -1,6 +1,7 @@
 ---
 layout: single
 title:  "An Underfit Overview of Machine Learning"
+permalink: /Writing/w1
 date:   2019-06-04
 collection: Writing
 ---
