--- a/_posts/2019-06-11-proj1.md
+++ b/_posts/2019-06-11-proj1.md
@@ -1,8 +1,8 @@
 ---
-layout: collection
-title:  "Sample"
-date:   2019-06-11
-collection: Project
+layout: single
+title:  "sample"
+permalink: /Project/p1
+date:   2019-06-04
 ---
 
 Sample.
