--- a/_posts/2019-07-23-zillow.md
+++ b/_posts/2019-07-23-zillow.md
@@ -297,7 +297,7 @@ year_plot.set_xticklabels(year_plot.get_xticklabels(), rotation=90)
 
 
 ![png](output_13_1.png)
-
+<img src="/assets/images/zillow/output_13_1.png" width="100%">
 
 This graph shows the median housing price within michigan over the course of the dataset. It accurately shows the 2008 recession and therefore is fairly reasonable to believe.
 
@@ -375,6 +375,7 @@ state_plot.set_xticklabels(state_plot.get_xticklabels(), rotation=90,size=7)
 
 
 ![png](output_17_1.png)
+<img src="/assets/images/zillow/output_17_1.png" width="100%">
 
 
 This graph makes intuitive sense as the states as the top are Hawaii and California along with Washington D.C. The cheapes states are West Virginia, Mississippi, and Oklahoma.
@@ -1232,6 +1233,7 @@ q1_a_plot.set_xticklabels(q1_a_plot.get_xticklabels(), rotation=90,size=7)
 
 
 ![png](output_29_1.png)
+<img src="/assets/images/zillow/output_29_1.png" width="100%">
 
 
 
@@ -1448,6 +1450,7 @@ q1_b_plot.set_xticklabels(q1_b_plot.get_xticklabels(), rotation=90,size=7)
 
 
 ![png](output_31_1.png)
+<img src="/assets/images/zillow/output_31_1.png" width="100%">
 
 
 **QUESTION 2: Explore each states’ cities and figure out where the most expensive and least
@@ -2176,6 +2179,8 @@ max_graph.set_xticklabels(max_graph.get_xticklabels(), rotation=90,size=7)
 
 
 ![png](output_37_1.png)
+<img src="/assets/images/zillow/output_37_1.png" width="100%">
+
 
 
 
@@ -2876,6 +2881,8 @@ min_graph.set_xticklabels(min_graph.get_xticklabels(), rotation=90,size=7)
 
 
 ![png](output_39_1.png)
+<img src="/assets/images/zillow/output_39_1.png" width="100%">
+
 
 
 
@@ -3852,6 +3859,8 @@ sns.lineplot(x="State_x", y="ZHVIPerSqft_AllHomes_x",data=comparison_a_graph)
 
 
 ![png](output_55_1.png)
+<img src="/assets/images/zillow/output_55_1.png" width="100%">
+
 
 
 
@@ -3873,6 +3882,8 @@ test_graph.set_xticklabels(max_graph.get_xticklabels(), rotation=90,size=7)
 
 
 ![png](output_56_1.png)
+<img src="/assets/images/zillow/output_56_1.png" width="100%">
+
 
 
 
@@ -4355,6 +4366,8 @@ sns.lineplot(x="State_x", y="ZHVIPerSqft_AllHomes_x",data=comparison_a2_graph)
 
 
 ![png](output_60_1.png)
+<img src="/assets/images/zillow/output_60_1.png" width="100%">
+
 
 
 
@@ -5774,6 +5787,8 @@ sns.lineplot(x="State_x", y="ZHVIPerSqft_AllHomes_x",data=comparison_c_graph)
 
 
 ![png](output_74_1.png)
+<img src="/assets/images/zillow/output_74_1.png" width="100%">
+
 
 
 
@@ -6242,6 +6257,8 @@ sns.scatterplot(y="Dif", x="City_y", data=comparison_c2_graph)
 
 
 ![png](output_76_1.png)
+<img src="/assets/images/zillow/output_76_1.png" width="100%">
+
 
 
 
@@ -6258,6 +6275,8 @@ sns.lineplot(x="State_x", y="ZHVIPerSqft_AllHomes_x",data=comparison_c2_graph)
 
 
 ![png](output_77_1.png)
+<img src="/assets/images/zillow/output_77_1.png" width="100%">
+
 
 
 
@@ -9002,6 +9021,8 @@ comparePlot(df_q5B_test,"ZHVIPerSqft_AllHomes_y","predicted_nb")
 
 
 ![png](output_150_1.png)
+<img src="/assets/images/zillow/output_150_1.png" width="100%">
+
 
 
 
