--- a/_posts/2019-12-16-yield.md
+++ b/_posts/2019-12-16-yield.md
@@ -6,5 +6,4 @@ date:   2019-12-16
 tags: project
 author_profile: true
 ---
-
-<img src="/assets/images/final_paper671.png width="100%">
+Under Development
