add images to yield

--- a/_posts/2019-12-16-yield.md
+++ b/_posts/2019-12-16-yield.md
@@ -280,6 +280,7 @@ sns.barplot(x=x_axis, y=y_axis)
 
 
 ![png](output_13_1.png)
+<img src="/assets/images/yield/output_13_1.png" width="100%">
 
 
 We see that each year has a very similar total number of car crashes.
@@ -396,6 +397,7 @@ df.groupby('HOUR').size().plot(ax=ax)
 
 
 ![png](output_22_1.png)
+<img src="/assets/images/zillow/output_22_1.png" width="100%">
 
 
 We can see in this figure that their is a bimodial distribution of crashes with a spike in the morning during the traditional morning rush hour times of 6 - 9 and a larger spike in the afternoon around 5 - 7 pm during the evening rush hour period.  Intuitively, this makes sense.
@@ -522,6 +524,7 @@ sns.barplot(x=pop, y=county)
 
 
 ![png](output_31_1.png)
+<img src="/assets/images/zillow/output_31_1.png" width="100%">
 
 
 ## Who is involved in these car crashes?
@@ -738,6 +741,7 @@ sns.barplot(x=x_axis, y=y_axis)
 
 
 ![png](output_52_1.png)
+<img src="/assets/images/zillow/output_52_1.png" width="100%">
 
 
 We can see here that pedestrians are involved in the most crash instances while trains are fairly rare in the crash data.
@@ -881,6 +885,7 @@ plt.xticks(rotation='vertical')
 
 
 ![png](output_65_1.png)
+<img src="/assets/images/zillow/output_65_1.png" width="100%">
 
 
 The vast majority of crashes occur under clear or cloudy circumstances. 
@@ -1014,6 +1019,7 @@ plt.xticks(rotation='vertical')
 
 
 ![png](output_75_1.png)
+<img src="/assets/images/zillow/output_75_1.png" width="100%">
 
 
 
@@ -1559,6 +1565,7 @@ result.groupby('Average Per Mile').size().plot(ax=ax)
 
 
 ![png](output_91_1.png)
+<img src="/assets/images/zillow/output_91_1.png" width="100%">
 
 
 We see here that we both don't have information for all of the cities in our crash data and that the most crashes are occuring in municipalities that fund their roads on average of 21,086.  The real issue here is that the different values are so highly specific that they are just representing the different cities. We need to bin these values
@@ -1961,6 +1968,7 @@ result.groupby('bin').size().plot(ax=ax)
 
 
 ![png](output_98_1.png)
+<img src="/assets/images/zillow/output_98_1.png" width="100%">
 
 
 ## Ann Arbor
@@ -2347,6 +2355,7 @@ df_aa.groupby('HOUR').size().plot(ax=ax)
 
 
 ![png](output_117_1.png)
+<img src="/assets/images/zillow/output_117_1.png" width="100%">
 
 
 The hourly distribution of crashes within the city follows the rush hour trend we identified in the total data
