adding missed pics

--- a/_posts/2019-12-16-yield.md
+++ b/_posts/2019-12-16-yield.md
@@ -378,6 +378,7 @@ result_dates = df.groupby('DATE_FULL').size().plot(ax=ax)
 
 
 ![png](output_20_0.png)
+<img src="/assets/images/zillow/output_20_0.png" width="100%">
 
 
 ### Let's look at the hourly distribution of crashes
@@ -766,6 +767,7 @@ sns.barplot(x=x_axis, y=y_axis)
 
 
 ![png](output_55_1.png)
+<img src="/assets/images/zillow/output_55_1.png" width="100%">
 
 
 
@@ -2336,6 +2338,7 @@ aa_result_dates = df_aa.groupby('DATE_FULL').size().plot(ax=ax)
 
 
 ![png](output_115_0.png)
+<img src="/assets/images/zillow/output_115_0.png" width="100%">
 
 
 This figure follow the trends that appeared in the overall dates figure.  We see spikes in car crashes on select days throughout the winter months.
