--- a/_posts/2019-12-16-yield.md
+++ b/_posts/2019-12-16-yield.md
@@ -6,7 +6,7 @@ date:   2019-12-16
 tags: project
 author_profile: true
 ---
-Under Development
+This project uses exploratory data analysis to visualize underlying car crash data for Southeast Michigan.  This step uses python, pandas, matplotlib, and seaborn to highlight trends that exist within the data. 
 
 
 
