change name proj2

--- a/_posts/2019-12-16-yield.md
+++ b/_posts/2019-12-16-yield.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "Project 02: Yield to the Data"
+title:  "Project 02: Car Crash EDA"
 permalink: /Writing/p4
 date:   2019-12-16
 tags: project
@@ -333,7 +333,7 @@ dates_result
     07/16/2017     193
     12/14/2014     193
     04/22/2018     194
-                  ... 
+                  ...
     10/31/2014     768
     11/20/2018     778
     12/24/2017     780
@@ -368,7 +368,7 @@ dates_result
 
 
 
-We see that the most car crashes in this dataset occurred on March 13th of 2017.  With a little investigation we see that the bottom of the list makes sense with christmas day emerging as one the days with the least number of car crashes.  Days at the top of this list mainly fall in the winter months and we can see that with some investigation that these days typically had wintery conditions with snow, ice, or very low temperatures occuring. 
+We see that the most car crashes in this dataset occurred on March 13th of 2017.  With a little investigation we see that the bottom of the list makes sense with christmas day emerging as one the days with the least number of car crashes.  Days at the top of this list mainly fall in the winter months and we can see that with some investigation that these days typically had wintery conditions with snow, ice, or very low temperatures occuring.
 
 
 ```python
@@ -824,21 +824,21 @@ df.groupby('WEATHER').size().sort_values(ascending =False)
 
 
 
-1 = clear 
+1 = clear
 
 2 = cloudy
 
-3 = FOG 
+3 = FOG
 
 4 = RAIN
 
-5 = SNOW 
+5 = SNOW
 
 6 =  SEVERE CROSSWINDS
 
 7 = SLEET / HAIL
 
-8 = BLOWING SNOW 
+8 = BLOWING SNOW
 
 9 = BLOWING SAND SOIL DIRT
 
@@ -889,7 +889,7 @@ plt.xticks(rotation='vertical')
 <img src="/assets/images/yield/output_65_1.png" width="100%">
 
 
-The vast majority of crashes occur under clear or cloudy circumstances. 
+The vast majority of crashes occur under clear or cloudy circumstances.
 
 ## Road Conditions
 
@@ -974,9 +974,9 @@ df.groupby('ROADCONDIT').size().sort_values(ascending =False)
 
 1 = dry
 
-2 = wet 
+2 = wet
 
-3 = ice 
+3 = ice
 
 4 = snow
 
@@ -984,7 +984,7 @@ df.groupby('ROADCONDIT').size().sort_values(ascending =False)
 
 6 = slush
 
-7 = debris 
+7 = debris
 
 8 = Water (Standing/Moving)
 
@@ -992,9 +992,9 @@ df.groupby('ROADCONDIT').size().sort_values(ascending =False)
 
 10 = Oily
 
-97 = other 
+97 = other
 
-98 = unknown 
+98 = unknown
 
 0 = null / not entered
 
@@ -2815,7 +2815,7 @@ len(det_old)
 
 
 ```python
-13205 / 115539 
+13205 / 115539
 ```
 
 
@@ -3301,4 +3301,3 @@ liv['bin']
 ```python
 
 ```
-
