change name proj2

--- a/_posts/2019-12-16-yield.md
+++ b/_posts/2019-12-16-yield.md
@@ -1,12 +1,12 @@
 ---
 layout: single
-title:  "Project 02: Car Crash EDA"
+title:  "Project 02: Car Crash Exploratory Data Analysis"
 permalink: /Writing/p4
 date:   2019-12-16
 tags: project
 author_profile: true
 ---
-This project uses exploratory data analysis to visualize underlying car crash data for Southeast Michigan.  This step uses python, pandas, matplotlib, and seaborn to highlight trends that exist within the data. 
+This project uses exploratory data analysis to visualize underlying car crash data for Southeast Michigan.  This step uses python, pandas, matplotlib, and seaborn to highlight trends that exist within the data.
 
 
 
